# RRR

./: .cursor-rules  .cursorrules  .gitignore  BRANCH_STRUCTURE.md  CHANGES_COMPLETED.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  COPY_UPDATES_MAPPING.md  DATABASE_SETUP_COMPLETE.md  DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_AI_TEAM_SETUP.md  GIT_CHEATSHEET.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LOGO_CONVERSION_GUIDE.md  MERGE_COMPLETION_REPORT.md  MERGE_STRATEGY.md  MODEL_SELECTION_FIX.md  PHASE3_SUMMARY.md  PRODUCTS_LAUNCH_SUMMARY.md  PR_REVIEW_FIXES.md  PYTHON_MIGRATION_SUMMARY.md  RAFFLE_SUMMARY.md  README.md  REPOSITORY_AUDIT_REPORT.md  REQUIREMENTS.md  SECURITY_HARDENING_SUMMARY.md  SETUP_GIT_WORKFLOW.md  SUPABASE_PREMIUM_IMPLEMENTATION.md  VERCEL_DEPLOYMENT_CHECKLIST.md  VERIFICATION_CHECKLIST.md  VERIFICATION_SUMMARY.md  WHATS_NEW.md  env-template-lane-game.txt  kill-the-boy-raffle-enhanced.plan.md  package-lock.json  package.json  pnpm-workspace.yaml  setup-git-workflow.sh  (+1 more)
.claude/: CODEBASE_INDEX.md  CODE_HARDENING_SUMMARY.md  (+10 more)
.github/ai-team/: README.md  jest.config.js  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/ai-team/configs/: main-config.yml
.github/ai-team/personalities/: git-worktree-best-practices.md
.github/ai-team/scripts/: add-env-blocks.py  add-timeouts.sh  add-workflow-timeouts.py  ai-api-handler.js  ai-api-handler.test.js  ai_api_handler.py  cost-reporter.js  cost_reporter.py  fix-all-workflows.sh  fix-workflow-env-blocks.sh  update-workflows.sh
.github/ai-team/tests/: __init__.py  test_ai_api_handler.py
(+502 files in other folders)
